force-app/main/default/objects/Verkaufsraum__c/Verkaufsraum__c.object-meta.xml
<CustomObject>
    <label>Kundenakte</label>
    <nameField>
        <label>Verkaufsraum Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kundenakten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>