force-app/main/default/objects/Verkaufsraum__c/fields/AktiveBerechnung__c.field-meta.xml
<CustomField>
    <fullName>AktiveBerechnung__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aktive Berechnung</label>
    <referenceTo>Berechnung__c</referenceTo>
    <relationshipName>Verkaufsraeume</relationshipName>
    <type>Lookup</type>
</CustomField>