force-app/main/default/objects/Verkaufsraum__c/fields/BaufinanzierungProMonat__c.field-meta.xml
<CustomField>
    <fullName>BaufinanzierungProMonat__c</fullName>
    <label>Baufinanzierung pro Monat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>