force-app/main/default/objects/Verkaufsraum__c/fields/Beratungsart__c.field-meta.xml
<CustomField>
    <fullName>Beratungsart__c</fullName>
    <label>Beratungsart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eigenberatung</fullName>
            </value>
            <value>
                <fullName>Beratung mit Carestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>