force-app/main/default/objects/Verkaufsraum__c/fields/BeratungsportalZugangAnlegen__c.field-meta.xml
<CustomField>
    <fullName>BeratungsportalZugangAnlegen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zugriff für Kunden erlauben</label>
    <type>Checkbox</type>
</CustomField>