force-app/main/default/objects/Verkaufsraum__c/fields/BeruflicheSituation__c.field-meta.xml
<CustomField>
    <fullName>BeruflicheSituation__c</fullName>
    <label>Berufliche Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angestellt</fullName>
            </value>
            <value>
                <fullName>Selbstständig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>