force-app/main/default/objects/Verkaufsraum__c/fields/Beschreibung__c.field-meta.xml
<CustomField>
    <fullName>Beschreibung__c</fullName>
    <label>Beschreibung</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>