force-app/main/default/objects/Verkaufsraum__c/fields/Betriebsrente__c.field-meta.xml
<CustomField>
    <fullName>Betriebsrente__c</fullName>
    <label>Betriebsrente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>