force-app/main/default/objects/Verkaufsraum__c/fields/ErsterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>ErsterKaeufer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>1. Käufer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>VerkaufsraeumeErsterKaeufer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>