force-app/main/default/objects/Verkaufsraum__c/fields/Finanzierung__c.field-meta.xml
<CustomField>
    <fullName>Finanzierung__c</fullName>
    <label>Finanzierung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carestone</fullName>
            </value>
            <value>
                <fullName>Fremdfinanzierung</fullName>
            </value>
            <value>
                <fullName>Eigenkapitalzahlung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>