force-app/main/default/objects/Verkaufsraum__c/fields/FreieLiquiditaetVorInvestment__c.field-meta.xml
<CustomField>
    <fullName>FreieLiquiditaetVorInvestment__c</fullName>
    <label>Freie Liquidität vor Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>