force-app/main/default/objects/Verkaufsraum__c/fields/GesetzlicheRente__c.field-meta.xml
<CustomField>
    <fullName>GesetzlicheRente__c</fullName>
    <label>Gesetzliche Rente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>