force-app/main/default/objects/Verkaufsraum__c/fields/KaltmieteProMonat__c.field-meta.xml
<CustomField>
    <fullName>KaltmieteProMonat__c</fullName>
    <label>Kaltmiete pro Monat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>