force-app/main/default/objects/Verkaufsraum__c/fields/KindergeldProMonat__c.field-meta.xml
<CustomField>
    <fullName>KindergeldProMonat__c</fullName>
    <label>Kindergeld pro Monat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>