force-app/main/default/objects/Verkaufsraum__c/fields/KirchensteuerInProzent__c.field-meta.xml
<CustomField>
    <fullName>KirchensteuerInProzent__c</fullName>
    <label>Kirchensteuer in Prozent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>