force-app/main/default/objects/Verkaufsraum__c/fields/LeasingKreditProMonat__c.field-meta.xml
<CustomField>
    <fullName>LeasingKreditProMonat__c</fullName>
    <label>Leasing / Kredit pro Monat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>