force-app/main/default/objects/Verkaufsraum__c/fields/Makler__c.field-meta.xml
<CustomField>
    <fullName>Makler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Makler</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Verkaufsraeume</relationshipName>
    <type>Lookup</type>
</CustomField>