force-app/main/default/objects/Verkaufsraum__c/fields/MaximalEinzusetzendesEigenkapital__c.field-meta.xml
<CustomField>
    <fullName>MaximalEinzusetzendesEigenkapital__c</fullName>
    <label>Maximal einzusetzendes Eigenkapital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>