force-app/main/default/objects/Verkaufsraum__c/fields/MaximalerMonatlicherAufwand__c.field-meta.xml
<CustomField>
    <fullName>MaximalerMonatlicherAufwand__c</fullName>
    <label>Maximaler monatlicher Aufwand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>