force-app/main/default/objects/Verkaufsraum__c/fields/MieteinnahmenProMonat__c.field-meta.xml
<CustomField>
    <fullName>MieteinnahmenProMonat__c</fullName>
    <label>Mieteinnahmen pro Monat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>