force-app/main/default/objects/Verkaufsraum__c/fields/MonatlichesNettoeinkommen__c.field-meta.xml
<CustomField>
    <fullName>MonatlichesNettoeinkommen__c</fullName>
    <label>Monatliches Nettoeinkommen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>