force-app/main/default/objects/Verkaufsraum__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neu</fullName>
            </value>
            <value>
                <fullName>1. Beratung</fullName>
            </value>
            <value>
                <fullName>2. Beratung</fullName>
            </value>
            <value>
                <fullName>3. Beratung</fullName>
            </value>
            <value>
                <fullName>Reserviert</fullName>
            </value>
            <value>
                <fullName>Notar</fullName>
            </value>
            <value>
                <fullName>Gewonnen</fullName>
            </value>
            <value>
                <fullName>Verloren</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>