force-app/main/default/objects/Verkaufsraum__c/fields/PrivateKrankenversicherungProMonat__c.field-meta.xml
<CustomField>
    <fullName>PrivateKrankenversicherungProMonat__c</fullName>
    <label>Private Krankenversicherung pro Monat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>