force-app/main/default/objects/Verkaufsraum__c/fields/PrivateRentenversicherung__c.field-meta.xml
<CustomField>
    <fullName>PrivateRentenversicherung__c</fullName>
    <label>Private Rentenversicherung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>