force-app/main/default/objects/Verkaufsraum__c/fields/RenditewunschEigenkapital__c.field-meta.xml
<CustomField>
    <fullName>RenditewunschEigenkapital__c</fullName>
    <label>Renditewunsch Eigenkapital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>