force-app/main/default/objects/Verkaufsraum__c/fields/RentenlueckeZumRentenbeginn__c.field-meta.xml
<CustomField>
    <fullName>RentenlueckeZumRentenbeginn__c</fullName>
    <label>Rentenlücke zum Rentenbeginn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>