force-app/main/default/objects/Verkaufsraum__c/fields/SonstigeEinnahmenProMonat__c.field-meta.xml
<CustomField>
    <fullName>SonstigeEinnahmenProMonat__c</fullName>
    <label>Sonstige Einnahmen pro Monat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>