force-app/main/default/objects/Verkaufsraum__c/fields/SonstigeEinnahmenRente__c.field-meta.xml
<CustomField>
    <fullName>SonstigeEinnahmenRente__c</fullName>
    <label>Sonstige Einnahmen Rente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>