force-app/main/default/objects/Verkaufsraum__c/fields/UnterhaltProMonatAusgabe__c.field-meta.xml
<CustomField>
    <fullName>UnterhaltProMonatAusgabe__c</fullName>
    <label>Unterhalt pro Monat (Ausgabe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>