force-app/main/default/objects/Verkaufsraum__c/fields/UnterhaltProMonatEinnahme__c.field-meta.xml
<CustomField>
    <fullName>UnterhaltProMonatEinnahme__c</fullName>
    <label>Unterhalt pro Monat (Einnahme)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>