force-app/main/default/objects/Verkaufsraum__c/fields/ZieleKurzfristig__c.field-meta.xml
<CustomField>
    <fullName>ZieleKurzfristig__c</fullName>
    <inlineHelpText>0-5 Jahre</inlineHelpText>
    <label>Ziele kurzfristig</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>