force-app/main/default/objects/Verkaufsraum__c/fields/ZieleLangfristig__c.field-meta.xml
<CustomField>
    <fullName>ZieleLangfristig__c</fullName>
    <inlineHelpText>15+ Jahre</inlineHelpText>
    <label>Ziele langfristig</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>