force-app/main/default/objects/Verkaufsraum__c/fields/ZieleMittelfristig__c.field-meta.xml
<CustomField>
    <fullName>ZieleMittelfristig__c</fullName>
    <inlineHelpText>5-15 Jahre</inlineHelpText>
    <label>Ziele mittelfristig</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>