force-app/main/default/objects/Verkaufsraum__c/fields/ZuVersteuerndesEinkommenPerAnnum__c.field-meta.xml
<CustomField>
    <fullName>ZuVersteuerndesEinkommenPerAnnum__c</fullName>
    <label>Zu versteuerndes Einkommen p.a.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>