force-app/main/default/objects/Verkaufsraum__c/fields/ZuVersteuerndesEinkommenRentePerAnnum__c.field-meta.xml
<CustomField>
    <fullName>ZuVersteuerndesEinkommenRentePerAnnum__c</fullName>
    <label>Zu versteuerndes Einkommen Rente p.a.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>