force-app/main/default/objects/Verkaufsraum__c/fields/ZweiterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>ZweiterKaeufer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2. Käufer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>VerkaufsraeumeZweiterKaeufer</relationshipName>
    <type>Lookup</type>
</CustomField>