force-app/main/default/objects/Verkaufsraum__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ErsterKaeufer__c</columns>
    <columns>ZweiterKaeufer__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Makler__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>